Fixed vertical spacing between sponsors

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -88,6 +88,7 @@ header p {
     height: 8em;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 15px;
 }
 
 .horiz-flex .sponsor-wide {
